fix src to resume

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               >projects</a
             >
             <a
-              href="../CV.pdf"
+              href="CV.pdf"
               target="_blank"
               class="btn btn-lg btn-dark ml-1"
               role="button"
@@ -227,7 +227,7 @@
         <a
           class="btn btn-lg btn-danger"
           role="button"
-          href="../cv.pdf"
+          href="cv.pdf"
           target="_blank"
         >
           <i class="fas fa-download"></i> Full CV
