fix responsiveness of project section on small devices.

--- a/index.html
+++ b/index.html
@@ -246,22 +246,24 @@
       </div>
 
       <div class="row project1">
-        <div class="project-image col-lg-4 col-md-5 px-0">
+        <div class="project-image px-0 col-lg col-md col">
           <img class="img img-fluid" src="images/mobile.svg" />
         </div>
         <div
-          class="project-details col-md-5"
-          style="margin-top: auto; margin-bottom: auto;"
+          class="project-details"
+          style="margin-top: 10px; margin-bottom: 10px;"
         >
-          <div class="project-title col-lg">
-            <h1 class="text-danger display-3">FoodTracker</h1>
+          <div class="project-title col-lg col-md col">
+            <h1 class="text-danger font-weight-bold">FoodTracker</h1>
           </div>
-          <div class="project-description text-white text-wrap ml-3">
+          <div
+            class="project-description text-white text-wrap col-lg-8 col-md-8 col"
+          >
             Android application to track the expiration date of items and notify
             the user at certain time frames.
           </div>
-          <div class="project-stack ml-0 py-2 col-lg">
-            <h6 class="font-weight-bold text-nowrap text-secondary text-white">
+          <div class="project-stack ml py-2 col-lg-6 col-md-8 col">
+            <h6 class="font-weight-bold text-nowrap text-secondary">
               Java, XMl, Sqlite, Room
             </h6>
           </div>
