remove width from lead text and make intro more responsive.

--- a/index.html
+++ b/index.html
@@ -79,15 +79,17 @@
         <!-- Home Image -->
         <div class="home-image">
           <img class="img img-fluid" src="images/coder.svg" alt="coder pic" />
+          <div>
+            <h1 class="font-weight-bold text-nowrap">
+              Hi I'm Mohamed
+            </h1>
+          </div>
         </div>
 
         <!-- Name, Status & Relevent links container -->
-        <div class="container mt-0">
-          <!-- TODO: adjust font to match width of svg. -->
-          <h1 class="font-weight-bold">Hi I'm Mohamed</h1>
-
-          <div class="intro-text w-25 mx-auto">
-            <p class="font-weight-bold">
+        <div class="container">
+          <div class="intro-text">
+            <p class="font-weight-bold text-nowrap">
               A Software Developer
             </p>
           </div>
