remove static width on form and make it responsive.

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
         </p>
       </div>
 
-      <div class="form-div w-50 mx-auto mt-4">
+      <div class="form-div mt-4 col-lg-6 offset-lg-3">
         <form
           class="gform"
           method="POST"
