--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     />
 
     <link rel="stylesheet" href="css/index.css" />
+
+    <!-- Aos animations -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body data-spy="scroll" data-target="#nav-links-div" data-offset="250">
     <!-- Navigation Bar Start-->
@@ -77,7 +80,7 @@
       <!-- Image Container -->
       <div class="container mt-0">
         <!-- Home Image -->
-        <div class="home-image">
+        <div class="home-image" data-aos="zoom-in-down">
           <img class="img img-fluid" src="images/coder.svg" alt="coder pic" />
           <div>
             <h1 class="font-weight-bold text-nowrap">
@@ -87,7 +90,7 @@
         </div>
 
         <!-- Name, Status & Relevent links container -->
-        <div class="container">
+        <div class="container" data-aos="zoom-in-up">
           <div class="intro-text">
             <p class="font-weight-bold text-nowrap">
               A Software Developer
@@ -122,7 +125,7 @@
         <h1 class="font-weight-bold">Skills</h1>
       </div>
 
-      <div class="skill-cards">
+      <div class="skill-cards" data-aos="fade-right">
         <div class="row mt-4 text-center text-white">
           <div class="col-lg-2 col-md-3  col-sm-4 mt-4">
             <div class="card text-center p-3 mb-2 border-0  bg-dark">
@@ -225,7 +228,7 @@
         </div>
       </div>
 
-      <div class="text-center mt-3">
+      <div class="text-center mt-3" data-aos="fade-up">
         <a
           class="btn btn-lg btn-danger"
           role="button"
@@ -248,12 +251,13 @@
       </div>
 
       <div class="row project1">
-        <div class="project-image px-0 col-lg col-md col">
+        <div class="project-image px-0 col-lg col-md col" data-aos="fade-right">
           <img class="img img-fluid" src="images/mobile.svg" />
         </div>
         <div
           class="project-details"
-          style="margin-top: 10px; margin-bottom: 10px;"
+          style="margin-top: auto; margin-bottom: auto;"
+          data-aos="fade-left"
         >
           <div class="project-title col-lg col-md col">
             <h1 class="text-danger font-weight-bold">FoodTracker</h1>
@@ -289,7 +293,7 @@
         <h1 class="text-white font-weight-bold">MY CONTACTS</h1>
       </div>
 
-      <div class="social-link mt-4 text-center">
+      <div class="social-link mt-4 text-center" data-aos="fade-right">
         <a href="#"><i class="fab fa-twitter fa-2x mr-4"></i></a>
         <a href="#"><i class="fab fa-linkedin fa-2x mr-4"></i></a>
         <a href="#"><i class="fab fa-github fa-2x"></i></a>
@@ -304,6 +308,7 @@
           class="gform"
           method="POST"
           action="https://script.google.com/macros/s/AKfycbxcC0EZW18Ge1XoJdGdVviaSzc7zDHZR3XgltFWoqITliSTcm8G/exec"
+          data-aos="fade-up"
         >
           <div class="form-group">
             <input name="honeypot" type="text" value="" id="honeypot" />
@@ -367,5 +372,12 @@
       type="text/javascript"
       src="js/form-submission-handler.js"
     ></script>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        duration: 1200
+      });
+    </script>
   </body>
 </html>
