swap to fade animation

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <!-- Image Container -->
       <div class="container mt-0">
         <!-- Home Image -->
-        <div class="home-image" data-aos="zoom-in-down">
+        <div class="home-image" data-aos="fade-right">
           <img class="img img-fluid" src="images/coder.svg" alt="coder pic" />
           <div>
             <h1 class="font-weight-bold text-nowrap">
@@ -90,7 +90,7 @@
         </div>
 
         <!-- Name, Status & Relevent links container -->
-        <div class="container" data-aos="zoom-in-up">
+        <div class="container" data-aos="fade-up">
           <div class="intro-text">
             <p class="font-weight-bold text-nowrap">
               A Software Developer
