--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         <a
           class="btn btn-lg btn-danger"
           role="button"
-          href="cv.pdf"
+          href="CV.pdf"
           target="_blank"
         >
           <i class="fas fa-download"></i> Full CV
