--- a/index.html
+++ b/index.html
@@ -250,12 +250,15 @@
         <h1 class="font-weight-bold">Projects</h1>
       </div>
 
-      <div class="row project1">
-        <div class="project-image px-0 col-lg col-md col" data-aos="fade-right">
+      <div class="row project1 mb-5">
+        <div
+          class="project-image px-0 col-lg col-md col col-sm-12 col mb-3"
+          data-aos="fade-right"
+        >
           <img class="img img-fluid" src="images/mobile.svg" />
         </div>
         <div
-          class="project-details"
+          class="project-details col-lg-8"
           style="margin-top: auto; margin-bottom: auto;"
           data-aos="fade-left"
         >
@@ -278,6 +281,47 @@
               class="btn btn-lg btn-danger"
               role="button"
               href="https://github.com/V1254/FoodTracker"
+              target="_blank"
+            >
+              <i class="fab fa-github"></i> Github
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="row project2">
+        <div
+          class="project-image px-0 col-lg col-md col-sm-12 col mb-2"
+          data-aos="fade-right"
+        >
+          <img id="project2-image" class="img" src="images/webDev.svg" />
+        </div>
+        <div
+          class="project-details col-lg-8 col-md-8 col-sm"
+          style="margin-top: auto; margin-bottom: auto;"
+          data-aos="fade-left"
+        >
+          <div class="project-title col-lg col-md col-sm-12 col ">
+            <h1 class="text-danger font-weight-bold">Slitherlink</h1>
+          </div>
+          <div
+            class="project-description text-white text-wrap col-lg-8 col-md-8 col-xs-12 col"
+          >
+            Fully functional react web application to play the japanese game
+            slitherlink, utilising axios for http requests to firebase database.
+          </div>
+          <div
+            class="project-stack ml py-2 col-lg-6 col-md-8 col-sm-12 col-xs-12 col"
+          >
+            <h6 class="font-weight-bold text-nowrap text-secondary">
+              React, Axios, Firebase
+            </h6>
+          </div>
+          <div class="project-link ml-3">
+            <a
+              class="btn btn-lg btn-danger"
+              role="button"
+              href="https://github.com/V1254/Slitherlink-Web"
               target="_blank"
             >
               <i class="fab fa-github"></i> Github
