fix images dissapearing at <576

--- a/index.html
+++ b/index.html
@@ -251,16 +251,12 @@
       </div>
 
       <div class="row project1 mb-5">
-        <div
-          class="project-image px-0 col-lg col-md col col-sm-12 col mb-3"
-          data-aos="fade-right"
-        >
+        <div class="project-image px-0 col-lg col-md col-sm-12 col-12 mb-3">
           <img class="img img-fluid" src="images/mobile.svg" />
         </div>
         <div
-          class="project-details col-lg-8"
+          class="project-details col-lg-8 col-md col-sm"
           style="margin-top: auto; margin-bottom: auto;"
-          data-aos="fade-left"
         >
           <div class="project-title col-lg col-md col">
             <h1 class="text-danger font-weight-bold">FoodTracker</h1>
@@ -290,17 +286,10 @@
       </div>
 
       <div class="row project2">
-        <div
-          class="project-image px-0 col-lg col-md col-sm-12 col mb-2"
-          data-aos="fade-right"
-        >
+        <div class="project-image px-0 col-lg col-md col col-sm-12 col-12">
           <img id="project2-image" class="img" src="images/webDev.svg" />
         </div>
-        <div
-          class="project-details col-lg-8 col-md-8 col-sm"
-          style="margin-top: auto; margin-bottom: auto;"
-          data-aos="fade-left"
-        >
+        <div class="project-details col-lg-8 col-md col-sm-12">
           <div class="project-title col-lg col-md col-sm-12 col ">
             <h1 class="text-danger font-weight-bold">Slitherlink</h1>
           </div>
