add links to current media

--- a/index.html
+++ b/index.html
@@ -328,8 +328,12 @@
 
       <div class="social-link mt-4 text-center" data-aos="fade-right">
         <a href="#"><i class="fab fa-twitter fa-2x mr-4"></i></a>
-        <a href="#"><i class="fab fa-linkedin fa-2x mr-4"></i></a>
-        <a href="#"><i class="fab fa-github fa-2x"></i></a>
+        <a href="https://www.linkedin.com/in/masf/" target="_blank"
+          ><i class="fab fa-linkedin fa-2x mr-4"></i
+        ></a>
+        <a href="https://github.com/v1254" target="_blank"
+          ><i class="fab fa-github fa-2x"></i
+        ></a>
 
         <p class="mt-5 text-white font-italic">
           Shoot me a message with the form below.
